syntax = "proto3";

option java_package = "io.github.pavelshe11.authmicro.grpc";
option java_outer_classname = "getAccountInfoProto";

import "error.proto";

service GetAccountInfoService {
  rpc getAccountInfo (GetAccountInfoRequest) returns (GetAccountInfoResponse) {}
}

message GetAccountInfoRequest {
  string email = 1;
}

message GetAccountInfoResponse {
  bool accept = 1;
  string accountId = 2;
  string role = 3;
}
